--- a/src/components/ui/Navbar.module.css
+++ b/src/components/ui/Navbar.module.css
@@ -46,7 +46,7 @@
 }
 
 .logoPrimary {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Outfit', sans-serif;
   font-weight: 700;
   font-size: 1.25rem;
   line-height: 1.2;
